Adding frontend, config grunt to build, config serviceurl, implemented cors in backend, create views for view users and history, creating timeline with histories, yet implementation.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
+#backend
+--------
 node_modules
 node_modules/
 
 package-lock.json
+
+#frontend
+---------
+frontend/node_modules
+frontend/dist
+frontend/.tmp
+frontend/.sass-cache
+frontend/app/bower_components
