--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "postgres",
-    "database": "manager_users_dev",
+    "database": "manager_users",
     "host": "127.0.0.1",
     "port": 5432,
     "dialect": "postgres"
